Delete unnecessary partial (signup_errors). Add initial styling to search form (my games). Add live search feature to filters.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -828,7 +828,7 @@ img.lock-icon {
     left: -2px;
 }
 
-.uk-input {
+.login-input {
     background: none;
     border: none;
     border-radius: 5px;
@@ -837,7 +837,7 @@ img.lock-icon {
     padding-left: 36px;
 }
 
-.uk-input:focus {
+.login-input:focus {
     outline: none;
     background-color: #dddddd;
     color: #666;
