--- a/app/views/static_pages/settings.html.erb
+++ b/app/views/static_pages/settings.html.erb
@@ -1,30 +1,20 @@
-
-<div class="boundary uk-panel uk-placeholder uk-width-2-3@s">
-
-    <button class="uk-button uk-button-default uk-float-left" type="button">Hover</button>
-    <div uk-dropdown="boundary: .boundary; boundary-align: true; pos: right-top">
-        <ul class="uk-nav uk-dropdown-nav">
-            <li class="uk-active"><a href="#">Active</a></li>
-            <li><a href="#">Item</a></li>
-            <li class="uk-nav-header">Header</li>
-            <li><a href="#">Item</a></li>
-            <li><a href="#">Item</a></li>
-            <li class="uk-nav-divider"></li>
-            <li><a href="#">Item</a></li>
-        </ul>
+<form class="uk-grid-small" uk-grid>
+    <div class="uk-width-1-1">
+        <input class="uk-input" type="text" placeholder="Title or Developer">
     </div>
-
-    <button class="uk-button uk-button-default uk-float-right" type="button">Hover</button>
-    <div uk-dropdown="boundary: .boundary; boundary-align: true; pos: right-top">
-        <ul class="uk-nav uk-dropdown-nav">
-            <li class="uk-active"><a href="#">Active</a></li>
-            <li><a href="#">Item</a></li>
-            <li class="uk-nav-header">Header</li>
-            <li><a href="#">Item</a></li>
-            <li><a href="#">Item</a></li>
-            <li class="uk-nav-divider"></li>
-            <li><a href="#">Item</a></li>
-        </ul>
+    <div class="uk-width-1-2@s">
+        <input class="uk-input" type="text" placeholder="Title or Developer">
     </div>
-
-</div>
+    <div class="uk-width-1-4@s">
+        <input class="uk-input" type="text" placeholder="Title or Developer">
+    </div>
+    <div class="uk-width-1-4@s">
+        <input class="uk-input" type="text" placeholder="Title or Developer">
+    </div>
+    <div class="uk-width-1-2@s">
+        <input class="uk-input" type="text" placeholder="Title or Developer">
+    </div>
+    <div class="uk-width-1-2@s">
+        <input class="uk-input" type="text" placeholder="Title or Developer">
+    </div>
+</form>
