--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -1,23 +1,64 @@
-<div class="search-panels">
-  <%= search_form_for(@q, url: collection, remote: true) do |f| %>
-    <%= f.search_field(:name_dev_cont, placeholder: "Name/Developer" , autofocus: "true", autocomplete: "off") %>
-    <%= f.select(:plat_eq, user_platforms, include_blank: 'Select platform') %>
-    <label><%= f.radio_button(:physical_eq, true, checked: false, class: "") %> Physical</label>
-    <label><%= f.radio_button(:physical_eq, false, checked: false, class: "") %> Digital</label>
-    <label><%= f.radio_button(:physical_eq, nil, checked: true, class: "") %> All</label>
- <% end %>
-</div>
+<div>
+    <div class="uk-width-5-6 my-search">
+        <%= search_form_for(@q, url: collection, remote: true) do |f| %>
 
-<div id='my-search' style="display: none;"></div>
+        <div class="uk-inline">
+        <span class="s-icon" uk-icon="icon: search"></span>
+        <%= f.search_field(:name_dev_cont, placeholder: "Title or Developer", class: 'uk-input search-input', autofocus: "true", autocomplete: "off") %>
+        </div>
+
+        <div class="srch-div first"></div>
+
+        <div uk-form-custom="target: true">
+        <%= f.select(:plat_eq, user_platforms, {include_blank: 'All Platforms'}, {class: 'select-input'} ) %>
+        <span></span>
+        </div>
+
+        <div class="srch-div"></div>
+        <div class="uk-inline">
+            <label class="container">All<%= f.radio_button(:physical_eq, nil, checked: true, class: '') %><span class="checkmark"></span></label>
+            <label class="container">Digital<%= f.radio_button(:physical_eq, false, checked: false, class: '') %><span class="checkmark"></span></label>
+            <label class="container">Physical<%= f.radio_button(:physical_eq, true, checked: false, class: '') %><span class="checkmark"></span></label>
+        </div>
+
+        <%= content_tag(:button,'', id: 'search-reset', 'uk-close': '')%>
+        <% end %>
+    </div>
+</div>
+<div id='r-q' style="display: none;"></div>
+<div id='r-s' style="display: none;"></div>
 <div class="my-games">
     <%= render partial: 'panels_view/panels', locals: { collection: collection } %>
 </div>
-
 <script>
 $(function() {
-    $("#game_search #q_name_cont").keyup(function() {
+
+    function refresh() {
         $.get($("#game_search").attr("action"), $("#game_search").serialize(), null, "script");
         return false;
+    }
+
+    $("#q_name_dev_cont").keyup(function() {
+        refresh();
     });
+
+    $('#q_plat_eq').on('input', function() {
+        refresh();
+    });
+
+    $("#game_search input[type='radio']").on('input', function() {
+        refresh();
+    });
+
+    $('#search-reset').click(function(){
+        $("#q_name_dev_cont").val("");
+        $('#q_plat_eq').prop('selectedIndex',0)
+        $("#q_physical_eq").prop('checked', true);
+        $('.select-input ~ span').text('All Platforms');
+    });
+
 });
 </script>
+
+
+
