--- a/app/views/panels_view/_panels.html.erb
+++ b/app/views/panels_view/_panels.html.erb
@@ -19,6 +19,7 @@ function moreInfo(id) {
         }
     });
 }
+
 function shortSummary(id) {
     var dots = document.getElementById("dots-" + id);
     var moreText = document.getElementById("more-" + id);
@@ -31,29 +32,29 @@ function shortSummary(id) {
     }
 }
 </script>
+
+
+<div class="sort-links">
+    <span class="sort-icon"><%= svg 'sort' %></span>
+    <%= sort_link(@q, :name,'Title', {}, {remote: true}) %>
+    <div class="srch-div"></div>
+    <%= sort_link(@q, :first_release_date,'Release Date', {}, {remote: true}) %>
+    <div class="srch-div"></div>
+    <%= sort_link(@q, :added,'Date Added', {} ,{remote: true}) %>
+</div>
+
 <div class="uk-grid-collapse panels-grid" uk-grid>
-    <div class="uk-width-5-6 sort-links">
-        <%= sort_link(@q, :name, {}, {remote: true}) %>
-        <%= sort_link(@q, :first_release_date, {}, {remote: true}) %>
-        <%= sort_link(@q, :added,'Added',{} ,{remote: true}) %>
-    </div>
+
     <div class="uk-width-5-6 page-info-front">
-        <div uk-grid>
-            <div class="page-info">
-                <%= page_entries_info @games, html: false %>
-            </div>
-            <div class="uk-width-expand page-links pr">
-                <%= js_will_paginate @games, container: false, previous_label: 'Previous', next_label: 'Next' %>
-            </div>
+        <div class="page-links pr">
+            <%= js_will_paginate @games, container: false %>
         </div>
     </div>
+
     <% @games.select('games.*, collection_games.created_at').each do |game| %>
     <%= render partial: 'panels_view/game_panel', locals: { game: game, collection: collection } %>
     <% end %>
     <div class="uk-width-5-6 page-links">
-        <%= js_will_paginate @games, container: false,
-        previous_label: 'Previous',
-        next_label: 'Next'
-        %>
+        <%= js_will_paginate @games, container: false %>
     </div>
 </div>
