Fix panel actions so the work with sort feature.

--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -13,7 +13,7 @@
         </div>
 
         <div class="srch-div"></div>
-        <div class="uk-inline">
+        <div class="radios uk-inline">
             <label class="container">All<%= f.radio_button(:physical_eq, nil, checked: true, class: '') %><span class="checkmark"></span></label>
             <label class="container">Digital<%= f.radio_button(:physical_eq, false, checked: false, class: '') %><span class="checkmark"></span></label>
             <label class="container">Physical<%= f.radio_button(:physical_eq, true, checked: false, class: '') %><span class="checkmark"></span></label>
