--- a/app/views/collections/remove_game.js.erb
+++ b/app/views/collections/remove_game.js.erb
@@ -19,10 +19,26 @@ UIkit.notification({
 <% if @success %>
 var data = { type: 'refresh' };
 
-if ($('#my-search').text().length != 0) {
-    search = $('#my-search').text().split(',');
-    data['q'] = { name_dev_cont: search[0], plat_cont: search[1] }
-}
+    if ($('#r-q').text().length != 0 && $('#r-s').text().length != 0) {
+        search = $('#r-q').text().split(',');
+        data['q'] = {
+            name_dev_cont: search[0],
+            plat_cont: search[1],
+            physical_eq: search[2],
+            s: $('#r-s').text()
+        };
+    } else if ($('#r-q').text().length != 0) {
+        search = $('#r-q').text().split(',');
+        data['q'] = {
+            name_dev_cont: search[0],
+            plat_cont: search[1],
+            physical_eq: search[2]
+        };
+    } else if ($('#r-s').text().length != 0) {
+        data['q'] = {
+            s: $('#r-s').text()
+        };
+    }
 
 if ($('.pr em.current').length != 0) {
     var current_page = $('.pr em.current').text();
