--- a/app/views/games/edit.js.erb
+++ b/app/views/games/edit.js.erb
@@ -24,11 +24,29 @@ if (msg) {
 if (success) {
 
     reopen = $('#g-drop-' + game_id).attr('style') == 'display: block;';
-    var data = { type: 'refresh' };
+    var data = {
+        type: 'refresh'
+    };
 
-    if ($('#my-search').text().length != 0) {
-        search = $('#my-search').text().split(',');
-        data['q'] = { name_dev_cont: search[0], plat_cont: search[1] }
+    if ($('#r-q').text().length != 0 && $('#r-s').text().length != 0) {
+        search = $('#r-q').text().split(',');
+        data['q'] = {
+            name_dev_cont: search[0],
+            plat_cont: search[1],
+            physical_eq: search[2],
+            s: $('#r-s').text()
+        };
+    } else if ($('#r-q').text().length != 0) {
+        search = $('#r-q').text().split(',');
+        data['q'] = {
+            name_dev_cont: search[0],
+            plat_cont: search[1],
+            physical_eq: search[2]
+        };
+    } else if ($('#r-s').text().length != 0) {
+        data['q'] = {
+            s: $('#r-s').text()
+        };
     }
 
     if ($('.pr em.current').length != 0) {
