--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -484,7 +484,8 @@ span.gap {
 
 .g-added {
     margin: 0px;
-    font-size: 14px;
+    line-height: 21px;
+    font-size: 12px;
     font-style: normal;
     color: #929292;
 }
@@ -493,13 +494,11 @@ span.gap {
     padding-left: 30px;
 }
 
-.g-platforms {
+.g-right {
     font-size: 14px;
     font-style: italic;
     text-align: right;
     padding-right: 15px;
-    display: flex;
-    align-items: center;
 
     p {
         margin: 0;
