--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -6,6 +6,7 @@
         <%= f.search_field(:name_dev_cont, placeholder: "Title or Developer", class: 'uk-input search-input', autofocus: "true", autocomplete: "off") %>
         </div>
 
+        <% if collection.needs_platform %>
         <div class="srch-div first"></div>
         <div uk-form-custom="target: true">
             <%= f.select(:plat_eq, user_platforms, {include_blank: 'All Platforms'}, {class: 'select-input'} ) %>
@@ -18,6 +19,7 @@
             <label class="container">Digital<%= f.radio_button(:physical_eq, false, checked: false, class: '') %><span class="checkmark"></span></label>
             <label class="container">Physical<%= f.radio_button(:physical_eq, true, checked: false, class: '') %><span class="checkmark"></span></label>
         </div>
+        <% end %>
         <%= content_tag(:button,'', id: 'search-reset', 'uk-close': '')%>
         <% end %>
     </div>
@@ -32,8 +34,15 @@ $(function() {
     function showHideClose() {
         var status = [];
         status.push($('#q_name_dev_cont').val().length == 0);
-        status.push($('#q_plat_eq').val().length == 0);
-        status.push($("#game_search input[type='radio']:checked").val() == 'on');
+
+        if ($('#q_plat_eq').length) {
+            status.push($('#q_plat_eq').val().length == 0);
+        }
+
+        if ($('#q_physical_eq').length) {
+            status.push($("#game_search input[type='radio']:checked").val() == 'on');
+        }
+
         if (status.every(function(e) {
                 return (e == true)
             })) {
