--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -630,6 +630,7 @@ span.gap {
 .g-metacritic {
     background: #8e8e8e;
     border: 3px solid #bdbdbd;
+    transition-property: color, background-color, border-color;
 
     svg {
         max-width: 92%;
@@ -639,7 +640,7 @@ span.gap {
 
 .g-metacritic:hover {
     background: #5f5f5f;
-    border: 3px solid #a5a5a5;
+    border-color: #a5a5a5;
 
     svg {
         max-width: 92%;
