Add screenshot instead of thumb if game has no cover (panels). Add placeholder for cover. Add special thumb when games has no cover nor screenshots.

--- a/app/views/panels_view/_copy_form.html.erb
+++ b/app/views/panels_view/_copy_form.html.erb
@@ -5,8 +5,8 @@
 <%= hidden_field_tag :game_id, id %>
 <%= f.hidden_field :igdb_id, value: igdb_id %>
 <div class="action">
-<label class="c-m chosen">Copy<%= radio_button_tag 'copy', true, checked: true %><span class="checkmark"></span></label>
-<label class="c-m" style="padding-left: 3px;">Move<%= radio_button_tag 'copy', false %><span class="checkmark"></span></label>
+<label class="c-m chosen">Copy<%= radio_button_tag 'copy', true, checked: true %></label>
+<label class="c-m" style="padding-left: 3px;">Move<%= radio_button_tag 'copy', false %></label>
 <span class="cf-name"><%= shorter_name(game_name) %></span>
 </div>
 <hr>
