--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -453,6 +453,29 @@ span.gap {
     border-radius: 3px;
 }
 
+.no-thumb {
+    position: relative;
+    width: 70px;
+    height: 70px;
+    border-radius: 3px;
+    background: #dddddd;
+    box-shadow: inset -3px 4px 3px -2px rgba(0, 0, 0, 0.16);
+}
+
+.no-thumb svg path {
+    fill: #c5c5c5 !important;
+}
+
+.no-thumb svg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -23px;
+    margin-top: -23px;
+    width: 46px;
+    height: 46px;
+}
+
 .shadow {
     position: absolute;
     height: 100%;
