--- a/app/views/panels_view/_panels.html.erb
+++ b/app/views/panels_view/_panels.html.erb
@@ -1,39 +1,3 @@
-<script>
-function moreInfo(id) {
-    var panel = $('#g-click-' + id);
-    var hidee = $('#g-hide-' + id);
-    var drop = $('#g-drop-' + id);
-    panel.click(function() {
-        if (drop.is(':hidden')) {
-            hidee.show();
-            drop.slideDown('fast');
-        } else {
-            hidee.hide();
-            drop.slideUp('fast');
-        }
-    });
-    hidee.click(function() {
-        if (drop.is(':visible')) {
-            hidee.hide();
-            drop.slideUp('fast');
-        }
-    });
-}
-
-function shortSummary(id) {
-    var dots = document.getElementById("dots-" + id);
-    var moreText = document.getElementById("more-" + id);
-    if (dots.style.display === "none") {
-        dots.style.display = "inline";
-        moreText.style.display = "none";
-    } else {
-        dots.style.display = "none";
-        moreText.style.display = "inline";
-    }
-}
-</script>
-
-
 <div class="sort-links">
     <span class="sort-icon"><%= svg 'sort' %></span>
     <%= sort_link(@q, :name,'Title', {}, {remote: true}) %>
@@ -58,3 +22,43 @@ function shortSummary(id) {
         <%= js_will_paginate @games, container: false %>
     </div>
 </div>
+
+<script>
+function moreInfo() {
+
+    $('.g-click').each(function() {
+        var id = $(this).attr('gameid');
+        var hidee = $('#g-hide-' + id);
+        var drop = $('#g-drop-' + id);
+        $(this).click(function() {
+            if (drop.is(':hidden')) {
+                hidee.show();
+                drop.slideDown('fast');
+            } else {
+                hidee.hide();
+                drop.slideUp('fast');
+            }
+        });
+        hidee.click(function() {
+            if (drop.is(':visible')) {
+                hidee.hide();
+                drop.slideUp('fast');
+            }
+        });
+    });
+}
+
+moreInfo();
+
+function shortSummary(id) {
+    var dots = document.getElementById("dots-" + id);
+    var moreText = document.getElementById("more-" + id);
+    if (dots.style.display === "none") {
+        dots.style.display = "inline";
+        moreText.style.display = "none";
+    } else {
+        dots.style.display = "none";
+        moreText.style.display = "inline";
+    }
+}
+</script>
