--- a/app/views/collections/show.js.erb
+++ b/app/views/collections/show.js.erb
@@ -1,4 +1,4 @@
-$(".m-m").removeClass('active');
+$("li.active").removeClass('active');
 $("#m-<%= @collection.id %>").addClass('active');
 
 var refresh = eval('<%= @refresh %>')
