--- a/app/views/panels_view/_edit_form.html.erb
+++ b/app/views/panels_view/_edit_form.html.erb
@@ -9,7 +9,7 @@
 <label class="c-m chosen">Edit</span></label>
 <span class="cf-name"><%= shorter_name(game_name) %></span>
 </div>
-<hr>
+<hr class="md">
 <div id="platform-option">
     <% if game[:platforms] %>
     <%= f.hidden_field :needs_platform, value: false %>
