Add dependant destroy to collection model. Fix problem with activating proper collection in side menu after creating new collection (broken after styling edit and delete icons).

--- a/app/views/collections/create.js.erb
+++ b/app/views/collections/create.js.erb
@@ -1,6 +1,6 @@
 var msg = '<%= @message %>';
 var msg_pos = 'top-right';
-var active_el_id = $('a.active').attr('id');
+var active_el_id = $('li.active').attr('id');
 UIkit.modal($('#create-coll-modal')).hide();
 $(".side-menu").replaceWith("<%= escape_javascript(render partial: 'layouts/menu') %>");
 $('#' + active_el_id).addClass('active');
